--- a/ConfigWindow/ConfigWindow.csproj
+++ b/ConfigWindow/ConfigWindow.csproj
@@ -8,11 +8,12 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ConfigWindow</RootNamespace>
     <AssemblyName>ConfigWindow</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
+    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -49,10 +50,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>AC528F26989841DAA59A9A6542551F69F29B35C8</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>F222A302E92E61204F1B3838A110D34841BC4BF6</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>ConfigWindow_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>ConfigWindow_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -102,10 +103,12 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SetWindow.resx">
       <DependentUpon>SetWindow.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ConfigWindow_1_TemporaryKey.pfx" />
     <None Include="ConfigWindow_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
