--- a/QuickSet/QuickSet.csproj
+++ b/QuickSet/QuickSet.csproj
@@ -8,11 +8,12 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>QuickSet</RootNamespace>
     <AssemblyName>QuickSet</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
+    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -49,10 +50,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>334815B2800CFA4D375CCDC63D9517E2B7362BDD</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>E33F7F4F7D050DF97F3BAA23FFA8505C67216365</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>QuickSet_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>QuickSet_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -76,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="QuickSet_1_TemporaryKey.pfx" />
     <None Include="QuickSet_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
